--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ LLAMA_API_KEY=your_groq_api_key_here
 LLAMA_MODEL=llama-3.3-70b-versatile
 PINECONE_API_KEY=your_pinecone_api_key_here
 PINECONE_ENVIRONMENT=us-east-1
+VITE_API_BASE_URL=http://localhost:8000
